2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat.html
+++ b/bat.html
@@ -7,18 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Search Bus Stop | Buszy</title>
+    <title>Favourites | Buszy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-breakpoints.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-breakpoints.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
@@ -50,36 +50,36 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../index.html" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../about.html" class="nav-link">
+                    <a href="about.html" class="nav-link">
                         <i class="fa-solid fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../works-by-nrfz.html" class="nav-link">
+                    <a href="works-by-nrfz.html" class="nav-link">
                         <i class="fa-solid fa-pen-paintbrush"></i>
                         <span>Works By NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../eicw/eicw.html" class="nav-link">
+                    <a href="eicw/eicw.html" class="nav-link">
                         <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../blog.html" class="nav-link">
+                    <a href="blog.html" class="nav-link">
                         <i class="fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
@@ -127,31 +127,31 @@
 
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
-                <a href="../index.html" class="mobile-menu-link">
+                <a href="index.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../about.html" class="mobile-menu-link">
+                <a href="about.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../works-by-nrfz.html" class="mobile-menu-link">
+                <a href="works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-solid fa-pen-paintbrush"></i>
                     <span>Works By NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../eicw/eicw.html" class="mobile-menu-link">
+                <a href="eicw/eicw.html" class="mobile-menu-link">
                     <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../blog.html" class="mobile-menu-link">
+                <a href="blog.html" class="mobile-menu-link">
                     <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
@@ -182,12 +182,12 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="../index.html">
+                                    <a href="index.html">
                                         <i class="fa-solid fa-house"></i>
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="../bat.html">Buszy</a>
+                                    <a href="bat.html">Buszy</a>
                                 </li>
                             </ol>
                         </nav>
@@ -195,13 +195,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Search</h1>
-                                </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px;">
-                                    <i class="fa-solid fa-search"
-                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
-                                    <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder="Bus Stop Name, Codes" style="padding-left: 35px;">
+                                    <h1 class="page-title" id="filter-title">Favourites</h1>
                                 </div>
                             </div>
                         </div>
@@ -219,17 +213,17 @@
                     </div>
 
                     <ul>
+
                         <li>
-                            <a href="../bat.html"><i class="fa-solid fa-star"></i> Favourites</a>
+                            <a href="#" class="active"><i class="fa-solid fa-star"></i> Favourites</a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
+                            <a href="bat/nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
                         </li>
 
                         <li>
-                            <a href="#" class="active"><i class="fa-solid fa-magnifying-glass"></i>
-                                Search</a>
+                            <a href="bat/abs.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
                         </li>
                     </ul>
 
@@ -247,21 +241,11 @@
         </div>
 
     </section>
-
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
 
-        <div class="container">
-            <h2 class="text-center">Bus Stops</h2>
-            <div class="list-group">
-                <p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;">
-                    <span class="spinner"></span>Fetching Bus Stops list for the first time...
-                </p>
-            </div>
-            <div class="pagination-buttons">
-                <button id="prev-button" class="btn pw-btn-prev btn-2 mt-15" style="display: none;">Previous</button>
-                <button id="next-button" class="btn pw-btn-next btn-2 mt-15" style="display: none;">Next</button>
-            </div>
+        <div class="container container-xxl">
+            <div id="bookmarks-container" class="list-group"></div>
         </div>
     </section>
 
@@ -294,88 +278,41 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="../js/navtabs.js"></script>
+    <script src="js/navtabs.js"></script>
 
-    <script src="bat.js"></script>
+    <script src="bat/bat.js"></script>
 
-    <script src="../js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
-    <script src="../js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
 
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
-    <script src="../js/pw.bundle.js"></script>
+    <script src="js/pw.bundle.js"></script>
 
-    <script src="../js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
 
-    <script src="../js/isotope.pkgd.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
 
-    <script src="../js/dstabs.js"></script>
+    <script src="js/dstabs.js"></script>
 
-    <script src="../js/utils.js"></script>
+    <script src="js/utils.js"></script>
 
     <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            const searchInput = document.getElementById('bus-stop-search');
-            const searchBusStopButton = document.getElementById('search-bus-stop-button');
-            const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops';
-            const listGroup = document.querySelector('.list-group');
-            const prevButton = document.getElementById('prev-button');
-            const nextButton = document.getElementById('next-button');
-            const limit = 20;
-            let allBusStops = [];
-            let currentPage = 1;
-            let totalPages = 1;
+        document.addEventListener('DOMContentLoaded', () => {
+            const bookmarksContainer = document.getElementById('bookmarks-container');
 
-            // Function to fetch all bus stops in batches
-            async function fetchAllBusStops() {
-                let allBusStops = [];
-                let skip = 0;
-                const batchSize = 500;
+            // Function to load bookmarks from localStorage
+            function loadBookmarks() {
+                const bookmarks = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
+                bookmarksContainer.innerHTML = '';
 
-                while (true) {
-                    try {
-                        const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
-                            method: 'GET',
-                            headers: { accept: 'application/json' },
-                        });
-
-                        if (!response.ok) throw new Error('Failed to fetch bus stops');
-
-                        const data = await response.json();
-                        allBusStops = allBusStops.concat(data.value);
-
-                        if (data.value.length < batchSize) break;
-
-                        skip += batchSize;
-                    } catch (error) {
-                        console.error('Error fetching bus stops:', error);
-                        break;
-                    }
-                }
-
-                localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
-                return allBusStops;
-            }
-
-            // Function to display bus stops for the current page
-            function displayBusStops(busStops, page) {
-                const startIndex = (page - 1) * limit;
-                const endIndex = startIndex + limit;
-                const paginatedBusStops = busStops.slice(startIndex, endIndex);
-
-                listGroup.innerHTML = '';
-                if (busStops.length === 0) {
-                    listGroup.innerHTML = '<p style="text-align:center;">No bus stops found.</p>';
-                    prevButton.style.display = 'none';
-                    nextButton.style.display = 'none';
+                if (bookmarks.length === 0) {
+                    bookmarksContainer.innerHTML = '<p>No bookmarks yet.</p>';
                     return;
                 }
 
-                // Get bookmarked bus stops from localStorage
-                const bookmarks = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
-
-                paginatedBusStops.forEach((busStop) => {
+                bookmarks.forEach((busStop) => {
                     const listItem = document.createElement('div');
                     listItem.className = 'list-group-item';
                     listItem.style.display = 'flex';
@@ -384,107 +321,39 @@
 
                     // Make the bus stop details clickable
                     const link = document.createElement('a');
-                    link.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+                    link.href = `bat/art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
                     link.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
                     link.style.flexGrow = '1';
                     link.style.textDecoration = 'none';
                     link.style.color = 'inherit';
 
-                    // Bookmark button
-                    const bookmarkButton = document.createElement('button');
-                    const isBookmarked = bookmarks.some((b) => b.BusStopCode === busStop.BusStopCode);
-
-                    if (isBookmarked) {
-                        // If already bookmarked, show as bookmarked
-                        bookmarkButton.innerHTML = '<i class="fa-solid fa-star"></i>';
-                        bookmarkButton.className = 'btn btn-success btn-sm';
-                    } else {
-                        // If not bookmarked, show as a regular bookmark button
-                        bookmarkButton.innerHTML = '<i class="fa-regular fa-star"></i>';
-                        bookmarkButton.className = 'btn btn-primary btn-sm';
-                    }
-
-                    // Add event listener to toggle bookmark
-                    bookmarkButton.addEventListener('click', (event) => {
+                    // Remove Bookmark button
+                    const removeButton = document.createElement('button');
+                    removeButton.innerHTML = '<i class="fa-solid fa-trash"></i>';
+                    removeButton.className = 'btn btn-danger btn-sm';
+                    removeButton.addEventListener('click', (event) => {
                         event.stopPropagation(); // Prevent the click from triggering the link
                         event.preventDefault(); // Prevent default link behavior
-                        toggleBookmark(busStop, bookmarkButton);
+                        removeBookmark(busStop.BusStopCode);
                     });
 
                     listItem.appendChild(link);
-                    listItem.appendChild(bookmarkButton);
-                    listGroup.appendChild(listItem);
+                    listItem.appendChild(removeButton);
+                    bookmarksContainer.appendChild(listItem);
                 });
-
-                prevButton.style.display = page > 1 ? 'inline-block' : 'none';
-                nextButton.style.display = page < totalPages ? 'inline-block' : 'none';
             }
 
-            // Function to toggle a bookmark
-            function toggleBookmark(busStop, button) {
+            // Function to remove a bookmark
+            function removeBookmark(busStopCode) {
                 const bookmarks = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
-                const bookmarkIndex = bookmarks.findIndex((b) => b.BusStopCode === busStop.BusStopCode);
-
-                if (bookmarkIndex === -1) {
-                    // Add the bookmark
-                    bookmarks.push(busStop);
-                    localStorage.setItem('bookmarkedBusStops', JSON.stringify(bookmarks));
-                    alert('Bus stop bookmarked!');
-
-                    // Update the button to indicate the bus stop is bookmarked
-                    button.innerHTML = '<i class="fa-solid fa-star"></i>';
-                    button.classList.remove('btn-primary');
-                    button.classList.add('btn-success');
-                } else {
-                    // Remove the bookmark
-                    bookmarks.splice(bookmarkIndex, 1);
-                    localStorage.setItem('bookmarkedBusStops', JSON.stringify(bookmarks));
-                    alert('Bus stop removed from bookmarks.');
-
-                    // Update the button to indicate the bus stop is not bookmarked
-                    button.innerHTML = '<i class="fa-regular fa-star"></i>';
-                    button.classList.remove('btn-success');
-                    button.classList.add('btn-primary');
-                }
+                const updatedBookmarks = bookmarks.filter((b) => b.BusStopCode !== busStopCode);
+                localStorage.setItem('bookmarkedBusStops', JSON.stringify(updatedBookmarks));
+                loadBookmarks(); // Refresh the displayed list
+                alert('Bus stop removed from bookmarks.');
             }
 
-            // Load bus stops from localStorage or fetch from API
-            const cachedBusStops = localStorage.getItem('allBusStops');
-            if (cachedBusStops) {
-                allBusStops = JSON.parse(cachedBusStops);
-            } else {
-                allBusStops = await fetchAllBusStops();
-            }
-
-            totalPages = Math.ceil(allBusStops.length / limit);
-            displayBusStops(allBusStops, currentPage);
-
-            // Pagination
-            prevButton.addEventListener('click', () => {
-                if (currentPage > 1) {
-                    currentPage--;
-                    displayBusStops(allBusStops, currentPage);
-                }
-            });
-
-            nextButton.addEventListener('click', () => {
-                if (currentPage < totalPages) {
-                    currentPage++;
-                    displayBusStops(allBusStops, currentPage);
-                }
-            });
-
-            // Search functionality
-            searchInput.addEventListener('input', (event) => {
-                const query = event.target.value.toLowerCase();
-                const filteredBusStops = allBusStops.filter((busStop) =>
-                    busStop.BusStopCode.toLowerCase().includes(query) ||
-                    busStop.Description.toLowerCase().includes(query)
-                );
-                totalPages = Math.ceil(filteredBusStops.length / limit);
-                currentPage = 1;
-                displayBusStops(filteredBusStops, currentPage);
-            });
+            // Load bookmarks on page load
+            loadBookmarks();
         });
     </script>
 
