--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                         <div class="single-portfolio-content">
                             <img src="https://i.imgur.com/kSHiKjW.png" alt>
                             <div class="hover-content-blog">
-                                <h4>Bus Arrival Timings</h4>
-                                <a class="info" href="bat/nbs.html" class="portfolio-img"><i
+                                <h4>Buszy - Bus Arrival Timings</h4>
+                                <a class="info" href="bat.html" class="portfolio-img"><i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
