--- a/bat/art.html
+++ b/bat/art.html
@@ -187,7 +187,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="../bat.html">Buszy</a>
+                                    <a href="../buszy.html">Buszy</a>
                                 </li>
                             </ol>
                         </nav>
@@ -221,7 +221,7 @@
 
                     <ul>
                         <li>
-                            <a href="../bat.html"><i class="fa-solid fa-star"></i> Favourites</a>
+                            <a href="../buszy.html"><i class="fa-solid fa-star"></i> Favourites</a>
                         </li>
 
                         <li>
@@ -312,7 +312,7 @@
 
     <script src="../js/navtabs.js"></script>
 
-    <script src="bat.js"></script>
+    <script src="buszy.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
