--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <img src="https://i.imgur.com/kSHiKjW.png" alt>
                             <div class="hover-content-blog">
                                 <h4>Buszy - Bus Arrival Timings</h4>
-                                <a class="info" href="bat.html" class="portfolio-img"><i
+                                <a class="info" href="buszy.html" class="portfolio-img"><i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
