--- a/bat/abs.html
+++ b/bat/abs.html
@@ -195,7 +195,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Search</h1>
+                                    <h1 class="page-title" id="filter-title">Search Bus Stop</h1>
                                 </div>
                                 <div style="position: relative; max-width: 400px; margin-top: 5px;">
                                     <i class="fa-solid fa-search"
@@ -220,7 +220,7 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html"><i class="fa-solid fa-star"></i> Favourites</a>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i> Pinned</a>
                         </li>
 
                         <li>
@@ -230,6 +230,12 @@
                         <li>
                             <a href="#" class="active"><i class="fa-solid fa-magnifying-glass"></i>
                                 Search</a>
+                        </li>
+
+                        
+                        <li>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
+                                Announcements</a>
                         </li>
                     </ul>
 
@@ -252,7 +258,7 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
 
         <div class="container">
-            <h2 class="text-center">Bus Stops</h2>
+            <h2 class="text-center" style="padding-top: 1em;">Bus Stops</h2>
             <div class="list-group">
                 <p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;">
                     <span class="spinner"></span>Fetching Bus Stops list for the first time...
@@ -390,25 +396,25 @@
                     link.style.textDecoration = 'none';
                     link.style.color = 'inherit';
 
-                    // Bookmark button
+                    // Pinned button
                     const bookmarkButton = document.createElement('button');
-                    const isBookmarked = bookmarks.some((b) => b.BusStopCode === busStop.BusStopCode);
+                    const isPinneded = bookmarks.some((b) => b.BusStopCode === busStop.BusStopCode);
 
-                    if (isBookmarked) {
+                    if (isPinneded) {
                         // If already bookmarked, show as bookmarked
-                        bookmarkButton.innerHTML = '<i class="fa-solid fa-star"></i>';
-                        bookmarkButton.className = 'btn btn-success btn-sm';
+                        bookmarkButton.innerHTML = '<i class="fa-solid fa-thumbtack-angle-slash"></i>'
+                        bookmarkButton.className = 'btn btn-unpin btn-sm';
                     } else {
                         // If not bookmarked, show as a regular bookmark button
-                        bookmarkButton.innerHTML = '<i class="fa-regular fa-star"></i>';
-                        bookmarkButton.className = 'btn btn-primary btn-sm';
+                        bookmarkButton.innerHTML = '<i class="fa-sharp fa-regular fa-thumbtack-angle"></i>';
+                        bookmarkButton.className = 'btn btn-toPin btn-sm';
                     }
 
                     // Add event listener to toggle bookmark
                     bookmarkButton.addEventListener('click', (event) => {
                         event.stopPropagation(); // Prevent the click from triggering the link
                         event.preventDefault(); // Prevent default link behavior
-                        toggleBookmark(busStop, bookmarkButton);
+                        togglePinned(busStop, bookmarkButton);
                     });
 
                     listItem.appendChild(link);
@@ -421,30 +427,30 @@
             }
 
             // Function to toggle a bookmark
-            function toggleBookmark(busStop, button) {
+            function togglePinned(busStop, button) {
                 const bookmarks = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
                 const bookmarkIndex = bookmarks.findIndex((b) => b.BusStopCode === busStop.BusStopCode);
 
                 if (bookmarkIndex === -1) {
-                    // Add the bookmark
+                    // Add the pinned bus stop
                     bookmarks.push(busStop);
                     localStorage.setItem('bookmarkedBusStops', JSON.stringify(bookmarks));
-                    alert('Bus stop bookmarked!');
+                    alert('Bus Stop Pinned!');
 
-                    // Update the button to indicate the bus stop is bookmarked
-                    button.innerHTML = '<i class="fa-solid fa-star"></i>';
-                    button.classList.remove('btn-primary');
-                    button.classList.add('btn-success');
+                    // Update the button to indicate the bus stop is pinned
+                    button.innerHTML = '<i class="fa-solid fa-thumbtack-angle-slash"></i>';
+                    button.classList.remove('btn-toPin');
+                    button.classList.add('btn-unpin');
                 } else {
-                    // Remove the bookmark
+                    // Remove the pinned bus stop
                     bookmarks.splice(bookmarkIndex, 1);
                     localStorage.setItem('bookmarkedBusStops', JSON.stringify(bookmarks));
-                    alert('Bus stop removed from bookmarks.');
+                    alert('Bus Stop Unpinned');
 
-                    // Update the button to indicate the bus stop is not bookmarked
-                    button.innerHTML = '<i class="fa-regular fa-star"></i>';
-                    button.classList.remove('btn-success');
-                    button.classList.add('btn-primary');
+                    // Update the button to indicate the bus stop is not pinned
+                    button.innerHTML = '<i class="fa-sharp fa-regular fa-thumbtack-angle"></i>';
+                    button.classList.remove('btn-unpin');
+                    button.classList.add('btn-toPin');
                 }
             }
 
