--- a/bat/art.html
+++ b/bat/art.html
@@ -232,6 +232,11 @@
                             <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
                                 Search</a>
                         </li>
+
+                        <li>
+                            <a href="ann.html" class="active"><i class="fa-solid fa-bullhorn"></i>
+                                Announcements</a>
+                        </li>
                     </ul>
 
                     <div class="right-arrow active">
