--- a/buszy copy.html
+++ b/buszy copy.html
@@ -7,18 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Nearby Bus Stops | Buszy</title>
+    <title>Favourites | Buszy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-breakpoints.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-breakpoints.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
@@ -50,36 +50,36 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../index.html" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../about.html" class="nav-link">
+                    <a href="about.html" class="nav-link">
                         <i class="fa-solid fa-circle-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../works-by-nrfz.html" class="nav-link">
+                    <a href="works-by-nrfz.html" class="nav-link">
                         <i class="fa-solid fa-pen-paintbrush"></i>
                         <span>Works By NRFZ</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../eicw/eicw.html" class="nav-link">
+                    <a href="eicw/eicw.html" class="nav-link">
                         <i class="fa-solid fa-map-location"></i>
                         <span>EICW</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../blog.html" class="nav-link">
+                    <a href="blog.html" class="nav-link">
                         <i class="fa-solid fa-comment"></i>
                         <span>Blog</span>
                     </a>
@@ -127,31 +127,31 @@
 
         <ul class="mobile-menu-nav">
             <li class="mobile-menu-item">
-                <a href="../index.html" class="mobile-menu-link">
+                <a href="index.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-house"></i>
                     <span>Home</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../about.html" class="mobile-menu-link">
+                <a href="about.html" class="mobile-menu-link">
                     <i class="fa-solid fa-regular fa-circle-user"></i>
                     <span>About</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../works-by-nrfz.html" class="mobile-menu-link">
+                <a href="works-by-nrfz.html" class="mobile-menu-link">
                     <i class="fa-solid fa-pen-paintbrush"></i>
                     <span>Works By NRFZ</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../eicw/eicw.html" class="mobile-menu-link">
+                <a href="eicw/eicw.html" class="mobile-menu-link">
                     <i class="fa-solid fa-map-location"></i>
                     <span>EICW</span>
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../blog.html" class="mobile-menu-link">
+                <a href="blog.html" class="mobile-menu-link">
                     <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
@@ -182,12 +182,12 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="../index.html">
+                                    <a href="index.html">
                                         <i class="fa-solid fa-house"></i>
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="../buszy.html">Buszy</a>
+                                    <a href="buszy.html">Buszy</a>
                                 </li>
                             </ol>
                         </nav>
@@ -195,7 +195,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Nearby Bus Stops</h1>
+                                    <h1 class="page-title" id="filter-title">Favourites</h1>
                                 </div>
                             </div>
                         </div>
@@ -213,22 +213,17 @@
                     </div>
 
                     <ul>
+
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i> Pinned</a>
+                            <a href="#" class="active"><i class="fa-solid fa-star"></i> Favourites</a>
                         </li>
 
                         <li>
-                            <a href="#" class="active" ><i class="fa-solid fa-location-dot"></i> Nearby</a>
+                            <a href="bat/nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
                         </li>
 
                         <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
-                                Search</a>
-                        </li>
-
-                        <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
-                                Announcements</a>
+                            <a href="bat/abs.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
                         </li>
                     </ul>
 
@@ -249,9 +244,8 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
 
-        <div class="container">
-            <h2 class="text-center" style="padding-top: 1em;">Bus Stops</h2>
-            <div id="bus-stops"></div>
+        <div class="container container-xxl">
+            <div id="bookmarks-container" class="list-group"></div>
         </div>
     </section>
 
@@ -284,177 +278,85 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="../js/navtabs.js"></script>
+    <script src="js/navtabs.js"></script>
 
-    <script src="buszy.js"></script>
+    <script src="bat/buszy.js"></script>
 
-    <script src="../js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 
-    <script src="../js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
 
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
-    <script src="../js/pw.bundle.js"></script>
+    <script src="js/pw.bundle.js"></script>
 
-    <script src="../js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
 
-    <script src="../js/isotope.pkgd.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
 
-    <script src="../js/dstabs.js"></script>
+    <script src="js/dstabs.js"></script>
 
-    <script src="../js/utils.js"></script>
+    <script src="js/utils.js"></script>
 
     <script>
-        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/nearby-bus-stops'; // Update with your server URL
-
-        // Automatically fetch nearby bus stops on page load
         document.addEventListener('DOMContentLoaded', () => {
-            const busStopsContainer = document.getElementById('bus-stops');
+            const bookmarksContainer = document.getElementById('bookmarks-container');
 
-            // Display "Searching for nearby bus stops..." message
-            busStopsContainer.innerHTML = '<p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;"><span class="spinner"></span> Searching for nearby bus stops...</p>';
+            // Function to load bookmarks from localStorage
+            function loadBookmarks() {
+                const bookmarks = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
+                bookmarksContainer.innerHTML = '';
 
-            // Check if geolocation is available
-            if (!navigator.geolocation) {
-                alert('Geolocation is not supported by your browser.');
-                busStopsContainer.innerHTML = '<p style="text-align:center;">Geolocation is not supported by your browser.</p>';
-                return;
-            }
-
-            // Get the user's current location
-            navigator.geolocation.getCurrentPosition(async (position) => {
-                const latitude = position.coords.latitude;
-                const longitude = position.coords.longitude;
-
-                try {
-                    // Fetch nearby bus stops from the backend
-                    const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
-                    if (!response.ok) {
-                        throw new Error('Failed to fetch nearby bus stops');
-                    }
-
-                    const busStops = await response.json();
-                    displayBusStops(busStops);
-                } catch (error) {
-                    console.error('Error:', error);
-                    busStopsContainer.innerHTML = '<p>Failed to fetch nearby bus stops. Please try again later.</p>';
-                    footer.style.display = 'block';
+                if (bookmarks.length === 0) {
+                    bookmarksContainer.innerHTML = '<p>No bookmarks yet.</p>';
+                    return;
                 }
-            }, (error) => {
-                console.error('Geolocation error:', error);
-                busStopsContainer.innerHTML = '<p>Unable to retrieve your location.</p>';
-            });
-        });
 
-        document.addEventListener('DOMContentLoaded', () => {
-            const cachedLocation = sessionStorage.getItem('userLocation');
-            const busStopsContainer = document.getElementById('bus-stops');
+                bookmarks.forEach((busStop) => {
+                    const listItem = document.createElement('div');
+                    listItem.className = 'list-group-item';
+                    listItem.style.display = 'flex';
+                    listItem.style.justifyContent = 'space-between';
+                    listItem.style.alignItems = 'center';
 
-            if (cachedLocation) {
-                const { latitude, longitude } = JSON.parse(cachedLocation);
-                fetchNearbyBusStops(latitude, longitude);
-            } else {
-                // Get the user's current location
-                navigator.geolocation.getCurrentPosition((position) => {
-                    const latitude = position.coords.latitude;
-                    const longitude = position.coords.longitude;
+                    // Make the bus stop details clickable
+                    const link = document.createElement('a');
+                    link.href = `bat/art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+                    link.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
+                    link.style.flexGrow = '1';
+                    link.style.textDecoration = 'none';
+                    link.style.color = 'inherit';
 
-                    // Cache the location
-                    sessionStorage.setItem('userLocation', JSON.stringify({ latitude, longitude }));
+                    // Remove Bookmark button
+                    const removeButton = document.createElement('button');
+                    removeButton.innerHTML = '<i class="fa-solid fa-trash"></i>';
+                    removeButton.className = 'btn btn-danger btn-sm';
+                    removeButton.addEventListener('click', (event) => {
+                        event.stopPropagation(); // Prevent the click from triggering the link
+                        event.preventDefault(); // Prevent default link behavior
+                        removeBookmark(busStop.BusStopCode);
+                    });
 
-                    fetchNearbyBusStops(latitude, longitude);
-                }, (error) => {
-                    console.error('Geolocation error:', error);
-                    busStopsContainer.innerHTML = '<p>Unable to retrieve your location.</p>';
-                }, {
-                    enableHighAccuracy: true,
-                    timeout: 10000,
-                    maximumAge: 0
+                    listItem.appendChild(link);
+                    listItem.appendChild(removeButton);
+                    bookmarksContainer.appendChild(listItem);
                 });
             }
-        });
 
-        async function fetchNearbyBusStops(latitude, longitude) {
-            try {
-                const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
-                if (!response.ok) {
-                    throw new Error('Failed to fetch nearby bus stops');
-                }
-
-                const busStops = await response.json();
-                displayBusStops(busStops);
-            } catch (error) {
-                console.error('Error:', error);
-                busStopsContainer.innerHTML = '<p style="text-align:center;">Failed to fetch nearby bus stops. Please try again later.</p>';
-                footer.style.display = 'block';
+            // Function to remove a bookmark
+            function removeBookmark(busStopCode) {
+                const bookmarks = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
+                const updatedBookmarks = bookmarks.filter((b) => b.BusStopCode !== busStopCode);
+                localStorage.setItem('bookmarkedBusStops', JSON.stringify(updatedBookmarks));
+                loadBookmarks(); // Refresh the displayed list
+                alert('Bus stop removed from bookmarks.');
             }
-        }
 
-// Display the 3 nearest bus stops
-function displayBusStops(busStops) {
-    const busStopsContainer = document.getElementById('bus-stops');
-    const footer = document.querySelector('.footer'); // Select the footer
-    busStopsContainer.innerHTML = ''; // Clear previous results
-
-    if (!busStops || busStops.length === 0) {
-        busStopsContainer.innerHTML = '<p>No bus stops found nearby.</p>';
-        footer.style.display = 'block'; // Show footer even if no bus stops are found
-        return;
-    }
-
-    busStops.forEach((busStop) => {
-        const distance = busStop.distance < 1
-            ? `${(busStop.distance * 1000).toFixed(0)} m` // Convert to meters if less than 1 km
-            : `${busStop.distance.toFixed(2)} km`; // Show in kilometers otherwise
-
-        const busStopElement = document.createElement('div');
-        busStopElement.className = 'bus-stop';
-        busStopElement.innerHTML = `
-            <p class="bs-name"><span>${busStop.Description}</span> </p>
-            <p class="bs-info">
-                <span style="font-weight:bold;">${busStop.BusStopCode}</span> | 
-                <span>${busStop.RoadName}</span> | 
-                <span>${distance}</span>
-            </p>
-        `;
-
-        // Add click event listener to the entire div
-        busStopElement.addEventListener('click', () => {
-            // Navigate to buszy.html with the BusStopCode as a query parameter
-            window.location.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
+            // Load bookmarks on page load
+            loadBookmarks();
         });
-
-        busStopsContainer.appendChild(busStopElement);
-    });
-
-    footer.style.display = 'block'; // Show footer after bus stops are loaded
-}
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const searchBusStopButton = document.querySelector('a[href="buszy.html"]'); // Select the "Search Bus Stop" button
-            const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
-
-            if (searchBusStopButton && searchInput) {
-                searchBusStopButton.addEventListener('click', () => {
-                    searchInput.value = ''; // Clear the search bar
-                });
-            }
-        });
-
-        // Populate the search bar with the BusStopCode from query parameters
-        document.addEventListener('DOMContentLoaded', () => {
-            const urlParams = new URLSearchParams(window.location.search);
-            const busStopCode = urlParams.get('BusStopCode'); // Get the BusStopCode from the query parameters
-
-            if (busStopCode) {
-                const searchInput = document.getElementById('bus-stop-search'); // Select the search bar
-                if (searchInput) {
-                    searchInput.value = busStopCode; // Populate the search bar with the BusStopCode
-                }
-            }
-        });
-
     </script>
+
 </body>
 
 </html>
