--- a/buszy.html
+++ b/buszy.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Favourites | Buszy</title>
+    <title>Buszy | Home</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -34,13 +34,31 @@
 
 <style>
     #cv-bat {
-        /* background-image: url("../img/bg-img/cover-bat.jpg"); */
-        /* height: 40vh; */
-        height: 10vh;
+        background-image: url("img/bg-img/cover-bat.jpg");
+        height: 40vh;
+        /* height: 10vh; */
     }
 
-    .footer {
-        display: none;
+    @media only screen and (min-width: 489px) and (max-width: 816px) {
+        .all-apps h2 {
+            margin-left: 0em;
+        }
+
+        .card-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            margin-bottom: 4em;
+            padding: 0 0em;
+        }
+
+        .card-bz {
+            width: 100%;
+        }
+
+        .card-bz p {
+            font-size: 20px;
+        }
     }
 </style>
 
@@ -170,84 +188,42 @@
                 <div class="col-12">
                 </div>
             </div>
-        </div>
     </section>
 
-    <!-- Title/Breadcrumbs -->
-    <section class="about-me-sum clearfix">
-        <div class="wbnrfz_eicw">
-            <div class="page-header-section">
-                <div class="container container-xxl container-mobile container-mobile-header">
-                    <div class="breadcrumb-wrapper">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item">
-                                    <a href="index.html">
-                                        <i class="fa-solid fa-house"></i>
-                                    </a>
-                                </li>
-                                <li class="breadcrumb-item">
-                                    <a href="buszy.html">Buszy</a>
-                                </li>
-                            </ol>
-                        </nav>
-                        <div class="page-title-wrapper">
-                            <div
-                                style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-                                <div>
-                                    <h1 class="page-title" id="filter-title">Favourites</h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+    <section class="all-apps">
+        <div class="container">
+            <h2></h2>
+            <div class="card-container">
+                <div class="card-bz card-nbs">
+                    <img src="bat/assets/nbs.png" alt="nbs" class="card-icon" />
+                    <p>Nearby Bus Stops</p>
+                    <a href="bat/nbs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+                <div class="card-bz card-sbs">
+                    <img src="bat/assets/sbs.png" alt="sbs" class="card-icon" />
+                    <p>Search Bus Stops</p>
+                    <a href="bat/abs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+                <div class="card-bz card-ann">
+                    <img src="bat/assets/ann.png" alt="ann" class="card-icon" />
+                    <p>Announcements</p>
+                    <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
-
-                <div class="scrollable-tabs-container">
-                    <div class="left-arrow">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                        </svg>
-                    </div>
-
-                    <ul>
-
-                        <li>
-                            <a href="#" class="active"><i class="fa-solid fa-star"></i> Favourites</a>
-                        </li>
-
-                        <li>
-                            <a href="bat/nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
-                        </li>
-
-                        <li>
-                            <a href="bat/abs.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
-                        </li>
-                    </ul>
-
-                    <div class="right-arrow active">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                        </svg>
-
-                    </div>
-                </div>
-                <hr>
             </div>
-
-        </div>
-
-    </section>
-    <!-- Section Contents -->
-    <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
-
-        <div class="container container-xxl">
-            <div id="bookmarks-container" class="list-group"></div>
         </div>
     </section>
+
+    <section class="pinned" id="pinned">
+        <div class="container">
+            <h2><i class="fa-solid fa-location-pin"></i>&nbsp; Pinned Bus Stops</h2>
+            <!-- Section Contents -->
+            <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
+                <div id="bookmarks-container" class="list-group"></div>
+            </section>
+        </div>
+    </section>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -308,7 +284,7 @@
                 bookmarksContainer.innerHTML = '';
 
                 if (bookmarks.length === 0) {
-                    bookmarksContainer.innerHTML = '<p>No bookmarks yet.</p>';
+                    bookmarksContainer.innerHTML = '<p>Pin a Bus Stop to get started!</p>';
                     return;
                 }
 
@@ -329,8 +305,8 @@
 
                     // Remove Bookmark button
                     const removeButton = document.createElement('button');
-                    removeButton.innerHTML = '<i class="fa-solid fa-trash"></i>';
-                    removeButton.className = 'btn btn-danger btn-sm';
+                    removeButton.innerHTML = '<i class="fa-solid fa-thumbtack-angle-slash"></i>';
+                    removeButton.className = 'btn btn-unpin btn-2';
                     removeButton.addEventListener('click', (event) => {
                         event.stopPropagation(); // Prevent the click from triggering the link
                         event.preventDefault(); // Prevent default link behavior
@@ -349,11 +325,32 @@
                 const updatedBookmarks = bookmarks.filter((b) => b.BusStopCode !== busStopCode);
                 localStorage.setItem('bookmarkedBusStops', JSON.stringify(updatedBookmarks));
                 loadBookmarks(); // Refresh the displayed list
-                alert('Bus stop removed from bookmarks.');
+                alert('Bus Stop Unpinned.');
             }
 
             // Load bookmarks on page load
             loadBookmarks();
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const allappsElement = document.querySelector('h2'); // Select the <h2> element
+
+            // Function to determine the all-apps based on the current time
+            function getGreeting() {
+                const now = new Date();
+                const hours = now.getHours();
+
+                if (hours >= 5 && hours < 12) {
+                    return 'Good Morning!';
+                } else if (hours >= 12 && hours < 18) {
+                    return 'Good Afternoon!!';
+                } else {
+                    return 'Good Evening!';
+                }
+            }
+
+            // Update the <h2> element with the all-apps
+            allappsElement.textContent = getGreeting();
         });
     </script>
 
