--- a/bat/art.html
+++ b/bat/art.html
@@ -234,7 +234,7 @@
                         </li>
 
                         <li>
-                            <a href="ann.html" class="active"><i class="fa-solid fa-bullhorn"></i>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
                                 Announcements</a>
                         </li>
                     </ul>
