--- a/bat/abs.html
+++ b/bat/abs.html
@@ -33,9 +33,7 @@
 </head>
 
 <style>
-    #cv-bat {
-        /* background-image: url("../img/bg-img/cover-bat.jpg"); */
-        /* height: 40vh; */
+    #cv-bat-subp {
         height: 10vh;
     }
 
@@ -164,7 +162,8 @@
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
     <!-- Cover Header -->
-    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-bat">
+    <!-- Cover Header -->
+    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-bat-subp">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
