--- a/bat/ann.html
+++ b/bat/ann.html
@@ -213,7 +213,7 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html"><i class="fa-solid fa-star"></i> Favourites</a>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i> Pinned</a>
                         </li>
 
                         <li>
